--- a/panel/app.css
+++ b/panel/app.css
@@ -26,7 +26,7 @@ body, body * {
 }
 
 .left-sidebar {
-  width: 150px;
+  width: 190px;
   float: left;
   height: 100%;
   background-color: #e4e4e4;
@@ -44,7 +44,7 @@ body, body * {
 }
 
 .content-area {
-  width: calc(100% - 151px);
+  width: calc(100% - 191px);
   float: left;
   height: 100%;
   overflow: auto;
@@ -69,4 +69,23 @@ body, body * {
 
 .action-list > li button {
   width: 100%;
+}
+
+.anchor-section {
+  height: calc(100% - 139px);
+  overflow: auto;
+}
+
+.anchor-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.anchor-list > li {
+  cursor: pointer;
+}
+
+.anchor-list > li:hover {
+  text-decoration: underline;
 }
